[package]
name = "webcsv"
version = "0.1.0"
authors = ["sarocu <sam@sarocu.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "webcsv"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
csv = "1.1.6"
csv-index = "0.1.6"

[dependencies.neon]
version = "0.10.0-alpha.3"
default-features = false
features = ["napi-6", "promise-api", "task-api"]